--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,38 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+out/
+.next/
+.build/
+
+# Local environment
 *.local
+.env
+.env.local
+.env.*.local
+
+# System Files
+.DS_Store
+Thumbs.db
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Optional: test coverage
+coverage/
+
+# Optional: typescript cache
+*.tsbuildinfo
